概要を作成

--- a/sample.tex
+++ b/sample.tex
@@ -10,31 +10,32 @@
 % この部分に，タイトル・氏名などを書く．
 % タイトルなどの定義の始まり
 \jtitle{日本語タイトル\\
---- 一二三四五六七八九十 ---
+移動手段・時間を考慮した旅のしおりによる
+ 観光スケジュール作成支援 
 }  % 論文の和文タイトル
 %
 \etitle{Title in English\\
---- one two three four five six seven eight nine ten ---
+Support for Making Tourism Schedule for Traveler's Notebook that Considered Moving Transportation and Time
 }% 論文の英文タイトル
 %
 \htitle{Short Title in English}   % ヘッダー用の論文の短縮英文タイトル
 %     必ず1行に収まるように英文タイトルを短縮する．
 %
-\jauthor{未来 太郎}     % 氏名(日本語)
-\eauthor{Taro MIRAI}   % 氏名(英語)
-\jaffiliciation{複雑系アーキテクチャ学科} % 所属学科名(日本語)
-\eaffiliciation{Department of Complex Media Architecture} % 所属学科名(英語)
-\studentnumber{1300000}   % 学籍番号
-\jadvisor{正指導 教員}    % 正指導教員名(日本語)
+\jauthor{辻浦 崇大}     % 氏名(日本語)
+\eauthor{Takahiro Tsujiura}   % 氏名(英語)
+\jaffiliciation{情報アーキテクチャ学科} % 所属学科名(日本語)
+\eaffiliciation{Department of Media Architecture} % 所属学科名(英語)
+\studentnumber{1012178}   % 学籍番号
+\jadvisor{伊藤 恵}    % 正指導教員名(日本語)
 \jcoadvisor{副指導 教員} % 副指導教員(日本語)がいる場合は
                         % コメントアウトし名前を書く
                         % 副指導教員がいない場合は，ここは削除しても可
-\eadvisor{Prof. Advisor}  % 正指導教員名(英語)
+\eadvisor{Kei Ito}  % 正指導教員名(英語)
 \ecoadvisor{Prof. Coadvisor}   % 副指導教員(英語)がいる場合は
                          % コメントアウトし名前を書く
                          % 副指導教員がいない場合は，ここは削除しても可
-\jdate{2013年1月31日}    % 論文提出日   (日本語)
-\edate{January 31, 2013}     % 論文提出年月　(英語)
+\jdate{2016年1月31日}    % 論文提出日   (日本語)
+\edate{January 31, 2016}     % 論文提出年月　(英語)
 % タイトルなどの定義の終わり
 
 \begin{document}
@@ -45,35 +46,15 @@
 %--------------------------------------------------------------------
 % 英文概要(250語程度)
 \begin{eabstract}
-Abstract in English. (about 250 words)
+This study tries to make Traveler's Notebook that considered moving transportation and time for making tourism schedule efficiently.
+Making individual travelers tourism schedule are difficult.
+It's reasons are three. First, they are difficult to grasp moving transportation and time. Second, they need to search information from many locations that needs travel. Third,  they are difficult to understand visually.
+Making Traveler's Notebook tools as one of the means facilitate them.
+But existing Traveler's Notebook tools almost entering tourist attraction, moving transportation and time manually.
+I think that making tourism schedule efficiently is possible not only displaying destination but also include Traveler's Notebook moving transportation and time between destination and destination.
+This study consider fun in trip, after trip 
+and tries to support the combination of existing tools displaying destination, adding the lists moving transportation and time and individual travelers have fun more.
 
-About Object Oriented Language.
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
-one two three four five six seven eight nine ten
 \end{eabstract}
 
 % 英文キーワード(5個程度をコンマ(,)で区切って羅列する)
@@ -84,29 +65,14 @@ Keyrods1, Keyword2, Keyword3, Keyword4, Keyword5
 %--------------------------------------------------------------------
 % 和文概要(400字程度)
 \begin{jabstract}
-日本語の概要を書く．(約400字，英文概要と合わせて0.8-1ページ程度）
-
-オブジェクト指向言語の研究をおこなった．
-（以下の内容は本文を含め，サンプルゆえ，
-荒唐無稽なものとなっています．）
-
-いろはにほへとちりぬるをわかよたれそつねならむういのおくやまけふこえて
-あさきゆめみしえひもせす
-いろはにほへとちりぬるをわかよたれそつねならむういのおくやまけふこえて
-あさきゆめみしえひもせす
-いろはにほへとちりぬるをわかよたれそつねならむういのおくやまけふこえて
-あさきゆめみしえひもせす
-いろはにほへとちりぬるをわかよたれそつねならむういのおくやまけふこえて
-あさきゆめみしえひもせす
-
-いろはにほへとちりぬるをわかよたれそつねならむういのおくやまけふこえて
-あさきゆめみしえひもせす
-いろはにほへとちりぬるをわかよたれそつねならむういのおくやまけふこえて
-あさきゆめみしえひもせす
-いろはにほへとちりぬるをわかよたれそつねならむういのおくやまけふこえて
-あさきゆめみしえひもせす
-いろはにほへとちりぬるをわかよたれそつねならむういのおくやまけふこえて
-あさきゆめみしえひもせす
+効率的な観光スケジュール作成を支援するために，移動手段・時間を考慮した旅のしおりの作成を試みる．
+個人旅行者が観光スケジュールを作成することは難しい．
+その理由として移動手段・時間を把握しにくいということ，旅行に必要な情報を様々な場所から探す必要があること，視覚的にわかりやすく作成しにくい，などが挙げられる．
+それらを行いやすくするための手段の1つとして，旅のしおり作成ツールが存在する．
+しかし既存の旅のしおり作成ツールは移動手段・時間を考慮せず，観光スポットや移動手段・時間を手動で入力するものが多い．
+そこで目的地を表示するだけでなく，目的地間の移動手段・時間を旅のしおりに組み込むことで効率的な観光スケジュール作成の支援が可能になると考えた．
+また旅行計画中や旅行後の振り返り時の楽しさも考慮する．
+本研究では既存のツールを組み合わせることで目的地を表示すること，目的地間の移動手段・時間を目的地のリストに加えることの他，旅行をより楽しむことの支援を試みる．
 
 \end{jabstract}
 
