--- a/sample.tex
+++ b/sample.tex
@@ -10,8 +10,7 @@
 % この部分に，タイトル・氏名などを書く．
 % タイトルなどの定義の始まり
 \jtitle{日本語タイトル\\
-移動手段・時間を考慮した旅のしおりによる
- 観光スケジュール作成支援 
+移動手段・時間を考慮した旅のしおりによる観光スケジュール作成支援 
 }  % 論文の和文タイトル
 %
 \etitle{Title in English\\
@@ -78,7 +77,7 @@ Keyrods1, Keyword2, Keyword3, Keyword4, Keyword5
 
 % 和文キーワード(5個程度をコンマ(,)で区切って羅列する)
 \begin{jkeyword}
-キーワード1, キーワード2, キーワード3, キーワード4, キーワード5
+観光, 旅のしおり, ああああ, キーワード4, キーワード5
 \end{jkeyword}
 
 %--------------------------------------------------------------------
@@ -87,7 +86,7 @@ Keyrods1, Keyword2, Keyword3, Keyword4, Keyword5
 
 % 本文のはじまり
 %--------------------------------------------------------------------
-\chapter{序論} % 章のタイトル
+\chapter{序論} % 1章のタイトル
 %\chapter{Introduction} % sample of English style
 
 １２３４５６７８９０１２３４５６７８９０１２３４５６７８９０
@@ -126,33 +125,25 @@ Keyrods1, Keyword2, Keyword3, Keyword4, Keyword5
 の能率向上とメンテナンス性の向上に寄与することを示す．
 
 %--------------------------------------------------------------------
-\chapter{関連研究}
+\chapter{関連研究}% 2章のタイトル
 
-\section{オブジェクト指向プログラミング}
+\section{CT-Planner}
 
-\subsection{Smalltalk-80} % subsectionのタイトル
+%\subsection{Smalltalk-80} % subsectionのタイトル
 
-Smalltalk-80は1982年ごろ，当時ゼロックスにいた...
+本研究の関連研究としてWebサービスによる対話型の旅行計画支援ツール「CT-Planner」[1]がある．
+このツールは不慣れな土地での旅行計画作成に不安を抱く個人旅行者を対象としたものであり，函館や横浜などの都市を選択し「のんびり歩こう」「文化を知りたい」等の旅行スタイルの中から自分の嗜好に合ったものを選択すると，選択した旅行スタイルに応じた観光スポットを巡る旅行プランが自動的に作成される．旅行プラン作成後もユーザは行きたい観光スポットを適宜変更でき「穴場好き」か「有名所好き」等の特性を選ぶことでユーザの嗜好に合った旅行プランに変更できる．
 
-\subsubsection{必要があれば} % subsubsectionのタイトル
+%\subsubsection{必要があれば} % subsubsectionのタイトル
 % ※ subsubsectionはあまり使わないほうがよい
 
-\subsection{Java 3D}
-
-Javaはオブジェクト指向言語で，そこで３D グラフィックスを扱うための..
-
-\section{グラフィックスシステム}
-
-\subsection{DirectX}
-
-DirectX はマイクロソフトのWindows上の....．
+．
 
 
 %--------------------------------------------------------------------
-\chapter{プログラミング言語FUN}
+\chapter{研究のアプローチ}% 3章のタイトル
 
-この章では，提案する理論，仮説，モデル，アルゴリズム，
-方法論，実装のなどの説明を行う．
+本研究では始めに既存の旅のしおりの利点，問題点の調査を行った．次に旅行計画の作成についての考え方を知るために旅行計画作成に関するアンケートを行った．また，ツールを作成するうえで必要になる機能を調査するために予備実験を行う．その後，作成するツールの設計・実装を行う．
 
 \section{提案する言語FUNの特徴}
 
@@ -180,75 +171,38 @@ DirectX はマイクロソフトのWindows上の....．
 
 
 %--------------------------------------------------------------------
-\chapter{実験と評価}
+\chapter{調査}% 4章のタイトル
 
-\section{保守性に関する評価}
+\section{既存の旅のしおり作成ツールの調査}
 
-ここでは，FUNを用いて記述した場合と
-それ以外の言語で書いた場合の比較を行なう．
+既存の旅のしおりは大きく分けて「観光スケジュールを作ることに重点を置いたツール」と「旅のしおりを作ることに重点を置いたツール」が存在する．\\
+　1つ目の「観光スケジュールを作ることに重点を置いたツール」とは観光スポットや飲食店等をツールの内で検索し，自分の行きたい観光スポット等をスケジュールに組み込んで作っていくというものである．この例として「ポケたび」[2]という旅行の計画を「旅のしおり」として作成・保存することができるツールがある．このツールでは旅行したい場所をエリアから選ぶまたは検索することで指定し，移動時間や滞在ホテルを指定することができる．また，このツールでは移動手段・時間は手動で入力する．\\
+　2つ目の「旅のしおりを作ることに重点を置いたツール」とは印刷すると修学旅行等で作るような冊子のしおりになるものである．こちらはしおりの外面のデザインや写真といったことも決められるツールが多い．この例として「旅のしおり工房」[3]という旅計画をたて「自分だけのガイドブック」をしおりにして持っていくことができるツールがある．このツールは始めに表紙の画像やデザインを決め、次に旅のテーマ，日程表などを作成していくことで冊子のしおりのように作ることができる．また，このツールでは旅行予定の場所や移動手段・時間は手動で入力する．\\
+　上記の2つのツールを「観光スケジュールが作成できるか」「観光スポットが検索できるか」「移動手段・時間が表示されるか」「しおりのデザインが決定できるか」の4つの観点で比較した場合，表1のようになる．
 
-\subsection{Fortranとの比較}
+\begin{table}[htb]
+\begin{center}
+\caption{既存の旅のしおり作成ツールの比較}
+  \begin{tabular}{|c|p{1.3cm}|p{1.3cm}|p{1.3cm}|p{1.3cm}|} \hline
+     & 観光スケジュールの作成 & 観光スポットの検索 & 移動手段・時間の表示 & しおりのデザインの決定 \\ \hline 
+    ポケ旅 & ○ & ○ & ○ & × \\ \hline
+    旅のしおり工房 & ○ & × & × & ○ \\ \hline
+  \end{tabular}
+  \end{center}
+\end{table}
 
-同一のゲームをFortranとFUNで記述してみた．
 
-\subsubsection{スーパーマリオブラザーズ}
+この調査からこれらの旅のしおり作成ツールでは移動手段・時間を表示していないということがわかった．\\
 
-一見，このプログラムはFortran向きと考えられるが，
-FUNのTAKOIKAライブラリを用いて記述すると，
-非常にコンパクトになる．
 
-\subsubsection{パックマン}
 
-このプログラムはどちらの言語にとっても，
-有利な要素はない，このことを反映して．
+\subsection{旅行計画作成に関するアンケート}
 
-\subsection{Javaとの比較}
 
-Java言語との比較では，惨敗であり，FUNは2倍の
-記述量を必要とした．しかし，これは，Javaのもつ
-パッケージIKURAが非常に強力であるためで，
-同一機能をもつライブラリを用意することにより，
-FUNにも同様の能力を持たせることができることが判明した．
-
-\section{実行速度}
-
-\subsection{Fortranとの比較}
-
-Java言語との比較では，惨敗であり，FUNは2倍の
-記述量を必要とした．しかし，これは，Javaのもつ
-パッケージIKURAが非常に強力であるためで，
-同一機能をもつライブラリを用意することにより，
-FUNにも同様の能力を持たせることができることが判明した．
-
-\subsection{Javaとの比較}
-
-Java言語との比較では，惨敗であり，FUNは2倍の
-記述量を必要とした．しかし，これは，Javaのもつ
-パッケージIKURAが非常に強力であるためで，
-同一機能をもつライブラリを用意することにより，
-FUNにも同様の能力を持たせることができることが判明した．
-
-\section{利用者によるアンケート}
-
-\subsection{初心者}
-
-Java言語との比較では，惨敗であり，FUNは2倍の
-記述量を必要とした．しかし，これは，Javaのもつ
-パッケージIKURAが非常に強力であるためで，
-同一機能をもつライブラリを用意することにより，
-FUNにも同様の能力を持たせることができることが判明した．
-
-\subsection{上級者}
-
-Java言語との比較では，惨敗であり，FUNは2倍の
-記述量を必要とした．しかし，これは，Javaのもつ
-パッケージIKURAが非常に強力であるためで，
-同一機能をもつライブラリを用意することにより，
-FUNにも同様の能力を持たせることができることが判明した．
 
 
 %--------------------------------------------------------------------
-\chapter{考察}
+\chapter{予備実験}% 5章のタイトル
 
 \section{評価結果}
 
@@ -266,9 +220,12 @@ Java言語との比較では，惨敗であり，FUNは2倍の
 同一機能をもつライブラリを用意することにより，
 FUNにも同様の能力を持たせることができることが判明した．
 
+%--------------------------------------------------------------------
+\chapter{作成するツール}% 6章のタイトル
+
 
 %--------------------------------------------------------------------
-\chapter{結論と今後の展開}
+\chapter{結論と今後の展開}% 7章のタイトル
 
 \section{まとめ}
 
