いろいろ追加

--- a/sample.tex
+++ b/sample.tex
@@ -163,13 +163,14 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 紙媒体の旅のしおり作成ツールには様々なものがあるが，代表して「TRAVELER'S notebook」\cite{traver}というツールについて記述する．このツールはTRAVELER'S COMPANYが販売する旅行の予定を記入できる手帳である．シンプルなデザインで旅行の予定や旅行中のことを自由に書き込むことができるスタイルとなっている．
 
 \section{既存の乗り換え案内ツール}
-既存の乗り換え案内ツールには様々なものがあるが，代表して「Yahoo!路線情報: 乗り換え案内」\cite{yahoo}というツールについて記述する．このツールはYahooが提供している，電車等の乗り換え案内を表示するツールである．このツールは，出発駅と到着駅を入力すると該当する路線や時刻や乗り換え案内情報を自動で表示する(図2.1)．日時または曜日と時刻を指定することでより詳細に乗り換え案内が表示される．列車の乗り換え案内以外にも飛行機のや列車の運航状況や時刻表，路線図なども調べることが可能である．
+既存の乗り換え案内ツールには様々なものがあるが，代表して「Yahoo!路線情報: 乗り換え案内」\cite{yahoo}というツールについて記述する．このツールはYahooが提供している，電車等の乗り換え案内を表示するツールである．このツールは，出発駅と到着駅を入力すると該当する路線や時刻や乗り換え案内情報を自動で表示する(図\ref{Lyahoo})．日時または曜日と時刻を指定することでより詳細に乗り換え案内が表示される．列車の乗り換え案内以外にも飛行機のや列車の運航状況や時刻表，路線図なども調べることが可能である．
 
 \begin{figure}[htpb]
 \begin{center}
 \includegraphics[scale=0.65]{yahoo.eps}
 \end{center}
 \caption{Yahoo!路線情報: 乗り換え案内}
+\label{Lyahoo}
 \end{figure}
 
 
@@ -177,7 +178,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 %--------------------------------------------------------------------
 \chapter{研究のアプローチ}% 3章のタイトル
 
-本研究では始めに既存の旅のしおりの利点，問題点の調査を行った．次に旅行計画の作成についての考え方を知るために旅行計画作成に関するアンケートを行った．また，ツールを作成するうえで必要になる機能を調査するために予備実験を行う．その後，作成するツールの設計・実装を行う．
+本研究では始めに既存の旅のしおりの利点，問題点の調査を行った．次に旅行計画の作成についての考え方を知るために旅行計画作成に関するアンケートを行った．また，ツールを作成するうえで必要になる機能を調査するために予備実験を行った．その後，作成するツールの設計・実装を行う．
 
 %\section{提案する言語FUNの特徴}
 
@@ -239,7 +240,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \begin{center}
 \includegraphics[scale=0.65]{nendai.eps}
 \end{center}
-\caption{回答者の年代割合}
+\caption{回答者の年代の割合}
 \label{Lnendai}
 \end{figure}
 
@@ -251,7 +252,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \begin{center}
 \includegraphics[scale=0.65]{gender.eps}
 \end{center}
-\caption{回答者の年代割合}
+\caption{回答者の性別の割合}
 \label{Lgender}
 \end{figure}
 
@@ -263,13 +264,13 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \begin{center}
 \includegraphics[scale=0.65]{job.eps}
 \end{center}
-\caption{回答者の年代割合}
+\caption{回答者の職業の割合}
 \label{Ljob}
 \end{figure}
 
 \clearpage
 
-\subsection{旅行の頻度と計画立案方法}
+\subsection{旅行の頻度と計画作成方法}
 
 「1年間に出張(公務旅行を含む)は何回ほど行きますか」という質問に対して「4回以下」という回答が68\%を占めた(図\ref{Lsyutyo})．
 
@@ -289,29 +290,29 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \begin{center}
 \includegraphics[scale=0.65]{cryoko.eps}
 \end{center}
-\caption{1年間に仕事以外の旅行に行く回数}
+\caption{1年間に仕事以外に旅行に行く回数}
 \label{Lcryoko}
 \end{figure}
 
 \clearpage
 
-「出張の旅行の際、空き時間等に観光することはありますか」という質問に対して「よくある」と「少しはある」という回答が82\%を占めた(図\ref{Lakitime})．
+「出張の旅行の際，空き時間等に観光することはありますか」という質問に対して「よくある」と「少しはある」という回答が82\%を占めた(図\ref{Lakitime})．
 
 \begin{figure}[htpb]
 \begin{center}
 \includegraphics[scale=0.65]{akitime.eps}
 \end{center}
-\caption{1年間に仕事以外の旅行に行く回数}
+\caption{空き時間に観光することがあるか}
 \label{Lakitime}
 \end{figure}
 
 \clearpage
 
-「出張の旅行の際によく使用するWebサイトを選択してください(複数回答可)」という質問に対して「航空会社のWebサイト(もしくはアプリ)」が最も多く13票，次点で「乗換案内サイト(ジョルダン、駅すぱあと、駅探等)」と「ルート検索サイト(Google Maps等)」が12票であった．(図\ref{Lwebsyutyo})．
+「出張の旅行の際によく使用するWebサイトを選択してください(複数回答可)」という質問に対して「航空会社のWebサイト(もしくはアプリ)」が最も多く13票，次点で「乗換案内サイト(ジョルダン，駅すぱあと，駅探等)」と「ルート検索サイト(Google Maps等)」が12票であった(図\ref{Lwebsyutyo})．
 
 \begin{figure}[htpb]
 \begin{center}
-\includegraphics[scale=0.65]{websyutyo.eps}
+\includegraphics[scale=0.7]{websyutyo.eps}
 \end{center}
 \caption{出張による旅行でよく使用するWebサイト(複数回答可)}
 \label{Lwebsyutyo}
@@ -332,7 +333,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 
 \begin{figure}[htpb]
 \begin{center}
-\includegraphics[scale=0.65]{webtrip.eps}
+\includegraphics[scale=0.7]{webtrip.eps}
 \end{center}
 \caption{観光のみの旅行でよく使用するWebサイト(複数回答可)}
 \label{Lwebtrip}
@@ -356,59 +357,131 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 
 「旅行計画を作成する際にオススメのWebサイトを教えてください」という質問に対しては
 \begin{itemize}
- \item 特定のサイトではないが、乗換案内サイトなどはサイトによって対応している交通機関が多少異なったりするので、行き先や状況に応じて同じ種類の異なるサイトを使い分けたり、並行して使ったりする
+ \item 特定のサイトではないが，乗換案内サイトなどはサイトによって対応している交通機関が多少異なったりするので，行き先や状況に応じて同じ種類の異なるサイトを使い分けたり，並行して使ったりする
  \item 観光客向けのおすすめコースやスポット（Webサイトや紙媒体のマップ）
- \item NAVERまとめ物語のように記事が書かれている場合もあるので、そうゆう場合読みやすい
- \item 各地域のデパートの地下に地域特産品が売っていることが多いので、まず地図を検索して宿泊先を決める、確認する。そしてその近くにあるデパートを探す→定休日でないか調べる→お店を確認する、食べログなどでレビューを見る・・・
- \item 美術館や博物館が好きなので、旅行期間で開催されている展覧会の情報をネットを巡って調べる→場所・交通手段を確認する、定休日でないか調べる
+ \item NAVERまとめ物語のように記事が書かれている場合もあるので，そうゆう場合読みやすい
+ \item 各地域のデパートの地下に地域特産品が売っていることが多いので，まず地図を検索して宿泊先を決める，確認する．そしてその近くにあるデパートを探す→定休日でないか調べる→お店を確認する，食べログなどでレビューを見る・・・
+ \item 美術館や博物館が好きなので，旅行期間で開催されている展覧会の情報をネットを巡って調べる→場所・交通手段を確認する，定休日でないか調べる
  \item バス停検索
  \item トレッキングのサイト
 \end{itemize}
 という回答があった．
 
+\clearpage
 
 \subsection{旅行の記録方法}
 
-　「旅行前に旅行の計画を紙やファイルなどをどこかに記録するか」という質問に対して「計画を立てて記録する」が56\%，「計画を立てるが記録しない」が33\%，計画を立てないが11\%であった(図4.1)．「計画を立てて記録する」と回答した人は具体的に紙やGoogleドライブに記録するという回答があった．
+　「旅行前に旅行の計画を紙やファイルなどをどこかに記録するか」という質問に対して「計画を立てて記録する」が56\%，「計画を立てるが記録しない」が33\%，計画を立てないが11\%であった(図\ref{Lfilerecord})．
+
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
-\includegraphics[scale=1.0]{filerecord.eps}
+\includegraphics[scale=0.65]{filerecord.eps}
+\end{center}
 \caption{旅行前に計画を記録するか}
-\end{center}
+\label{Lfilerecord}
 \end{figure}
 
-「旅行前に旅行の計画を誰かに話すか」という質問に対して「はい」は84\%「いいえ」は11\%「旅行の計画を立てない」が5\%であった(図4.2)．\\
+「計画を立てて記録する」と回答した方に記録する方法を記入してもらったところ，以下のような回答を得た．
+\begin{itemize}
+ \item 紙
+ \item Word
+ \item googleドライブ
+ \item evernote
+ \item 手帳
+\end{itemize}
+
+
+「計画を立てるが記録しない」と回答した方にその理由を記入してもらったところ，以下のような回答を得た．
+\begin{itemize}
+ \item めんどくさい
+ \item 計画通りに進まないことがあるから．おおまかな計画はたてるが，その場でスマートフォン等で検索する
+ \item 計画は立てた方がいいが，記録が面倒だから
+ \item 記録する必要がないため
+ \item Webページを利用して予約等行うとそこに記録が残るから
+ \item 記録するほど綿密に計画を立てない
+\end{itemize}
+
+
+\subsection{他人との共有方法}
+
+「旅行前に旅行の計画を誰かに話すか」という質問に対して「はい」は84\%「いいえ」は11\%「旅行の計画を立てない」が5\%であった(図\ref{Lbeforetalktrip})．\\
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
-\includegraphics[scale=1.0]{beforetalktrip.eps}
+\includegraphics[scale=0.65]{beforetalktrip.eps}
+\end{center}
 \caption{旅行前に計画を話すか}
-\end{center}
+\label{Lbeforetalktrip}
 \end{figure}
 
-「旅行後に旅行の計画を誰かに話すか」という質問に対して「はい」は32\%「いいえ」は63\%「旅行の計画を立てない」が5\%であった(図4.3)．\\
+
+「旅行前に計画を誰かに話す」と回答した方に，どんな立場の相手にどのような手段で伝えるか記述してもらったところ，以下のような回答を得た．
+\begin{itemize}
+ \item 友人にLineかtwitterで伝える
+ \item 旅行の同行者にメールで連絡
+ \item 口頭で大まかなスケジュールを伝える
+ \item 旅行の同伴者にはメールなどで伝える
+ \item 基本的に旅行の同行者にメールやGoogleドライブ上のファイルで共有
+ \item 出張時の旅程もGoogleドライブ上の共有ファイルで大まかに家族と共有
+ \item 友人に口頭で
+ \item 家族に電話やメールで連絡
+ \item 業務の旅行だったら事務局へ旅行伺書を提出する．個人の旅行だったら誰にも伝えない
+ \item 同行者と調べた情報を共有．家族に目的地（用務先），ホテル，飛行機や鉄道の便を通知
+ \item 旅行の同行者にGoogleカレンダーやメールで共有
+ \item 複数人の旅行で，自分がホテルの予約を行った場合は，LINEで伝える
+ \item 家族もしくは親族にメールもしくは紙で連絡
+ \item 家族に電話で連絡
+ \item 家族にテキストチャット(iMessage)で連絡
+\end{itemize}
+
+\clearpage
+
+「旅行後に旅行の計画を誰かに話すか」という質問に対して「はい」は32\%「いいえ」は63\%「旅行の計画を立てない」が5\%であった(図\ref{Laftertalktrip})．
+
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
-\includegraphics[scale=1.0]{aftertalktrip.eps}
+\includegraphics[scale=0.65]{aftertalktrip.eps}
+\end{center}
 \caption{旅行後に計画を話すか}
-\end{center}
+\label{Laftertalktrip}
 \end{figure}
 
-「旅行の計画を立てることをどう思うか(複数回答可)」という質問に対して，「楽しい」という回答が最も多く次点で「面倒」「わくわくする」「自分で立てたい」が続いた(図4.4)．\\
+
+「旅行後に計画を誰かに話す」と回答した方に，どんな立場の相手にどのような手段で伝えるか記述してもらったところ，以下のような回答を得た．
+\begin{itemize}
+ \item 友人にお土産ついでに伝える
+ \item 詳しい計画を伝えることはないですが，どこに行ったかなんとなく分かる程度にFacebookにアップしたりすることはある
+ \item 友人に口頭で
+ \item 家族に無事帰宅した旨を電話やメールで連絡
+ \item 同行者に無事帰宅した旨を電話やメールで連絡
+ \item 喋っていい内容であればFacebookに旅行で撮った写真をアップする．詳細なスケジュールは載せない
+ \item 伝えるというよりは，twitterなどのSNSに上げることが多い
+\end{itemize}
+
+
+
+\subsection{旅行計画作成の印象}
+
+「旅行の計画を立てることをどう思うか(複数回答可)」という質問に対して，「楽しい」という回答が最も多く次点で「面倒」「わくわくする」「自分で立てたい」が続いた(図\ref{Lhowthinktrip})．
+
+\clearpage
+
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
-\includegraphics[scale=1.0]{howthinktrip.eps}
-\caption{旅行計画を立てることをどう思うか}
+\includegraphics[scale=0.7]{howthinktrip.eps}
 \end{center}
+\caption{旅行計画を立てることをどう思うか}
+\label{Lhowthinktrip}
 \end{figure}
 
 これらの結果から，旅行の計画を立てる人は多く，旅行前に計画を話すということも行われることが多いとわかった．また，旅行計画を立てることに楽しさを感じる人が多いが，面倒だと感じる人も多い．そのためツールで楽しさを感じてもらいつつ，面倒さを解消することが必要になる．\\
 
+
+
 \section{考察}
-調査によって既存の旅のしおりには観光スポットまたは移動時間を手動で入力するものや移動手段を考慮せずに目的地をリスト的に表示するものが多いという問題点があることがわかった．そのため移動手段・時間を自動的に表示することでより利便性が高まると考えられる．「旅のしおり」というものの定義が曖昧であったため，比較調査に用いた観点を開発するツールに盛り込むべきであると考えられる．また，アンケート結果によって旅行計画を旅行前に作成する人が多いため，旅のしおり作成ツールが使用される可能性が高いと考えられる．また旅行計画を事前に話す人も多いため，作成するツールにはなんらかの方法によって他人と共有できる機能があると利便性が増すと考えられる．次に面倒さを解消することと，楽しさを感じることができる要素が必要であるということもわかった．どのような場面で楽しさを感じているかということはこのアンケート結果だけでは不明であったため，更に調べる必要があると考えられる．
+調査によって既存の旅のしおりには観光スポットまたは移動時間を手動で入力するものや移動手段を考慮せずに目的地をリスト的に表示するものが多いという問題点があることがわかった．そのため移動手段・時間を自動的に表示することでより作成するツールの利便性が高まると考えられる．
+また，今回比較に使用した「観光スケジュールの作成」「観光スポットの検索」「移動手段・時間の自動表示」「しおりのデザインの決定」「マルチデバイス対応」の5つの観点のうち，全てではなくてもいくつか満たされていることで「旅のしおり」になるということが考えられる．そのため，開発するツールでは可能な限りこれら5つの観点は盛り込まれているべきであると考える．\\
+　次にアンケート結果によって出張等の空き時間に観光する人が多いとわかった．これよりそれほど多くない空いた時間に素早く計画を立てることができる工夫があると，より利便性が高まると考えられる．出張の旅行と観光の旅行では使用するWebサイトに若干の違いが見られた．出張において航空会社のWebサイトが多く使用されているのは回答者が函館という地方都市に在住していることも影響していると考えられる．ルート検索サイトはどちらの場合でも使用している人が多いとわかった．これは馴染みの薄い土地に行く際には多くの人がルート案内サイトを使って経路を調べているからであると考えられる．観光による旅行では公式の観光情報サイトや特産品のサイトでより詳しい情報を得ようとしたり，レンタカーのサイトで移動手段を確保する人もいるとわかった．行きたい土地の観光スポットがまとまっているサイトを利用しているという回答もあった．これは多くの選択肢の中から自分の行きたい場所を選ぶことができるため，様々なサイトを移動する必要がないと考えられる．こういった選択の幅を広げる工夫は開発するツールでも取り入れるべきである．旅行計画の記録に関しては計画自体を立てる人は約9割であったが，記録までする人は約5割であった．記録しない人の考えとして，面倒ということやその場で考えるという回答があった．面倒という感情については後ほど詳しく考察する．
+複数人で行く場合は同伴者に事前に話す人が84\%であった．伝える方法としては口頭やメールなどが多いため，旅のしおり作成ツールによって他人とも共有できることで，利便性が高まると考えられる．旅行後はスケジュールを話すのではなく，旅行の経験や体験をお土産話として友人などに伝えるという回答があった．そのため，開発するツールではスケジュールを立てることだけを支援するのではなく，旅行の想い出を残す機能も必要であると考えられる．最後に旅行計画を立てることに関しては「楽しい」という回答と「面倒」という回答が多かった．「楽しい」という感情に寒鴉してはこれから行く旅行のことをあれこれ考えながら計画を立てることを楽しんでいると考えられる．逆に面倒と感じる要因としては自分の必要としている情報がなかなか手に入らないことや，細かく記録を残すことを億劫に思う感情があると考えられる．よって開発するツールには面倒さを解消することと，楽しさを感じることができる要素が必要である．どのような場面で楽しさを感じているかということはこのアンケート結果だけでは不確かであったため，更に詳しく調べる必要があると考えられる．
 
 
 %--------------------------------------------------------------------
@@ -420,9 +493,9 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \begin{figure}[htpb]
 \begin{center}
 %\includegraphics[width=4cm, height=2cm]{filerecord.eps}
-\includegraphics[scale=0.65]{semiexp.eps}
-\caption{予備実験イメージ}
+\includegraphics[scale=0.4]{semiexp.eps}
 \end{center}
+\caption{予備実験イメージ}
 \end{figure}
 
 
@@ -443,8 +516,10 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \end{figure}
 
 
-最初に箱根に行きたいと話し合い箱根の観光情報サイトを調べ始めた．次に大阪の観光をしたいということで大阪のおすすめ観光スポットを紹介しているサイトを調べた．そこで，ユニバーサルスタジオジャパン，海遊館，天保アニパ，天王寺動物園という観光スポットの候補を発見した．被験者にとってユニバーサルスタジオジャパンと海遊館は馴染みのある場所であったが，天保アニパと天王寺動物園については詳しく知らなかったため，その2つの観光スポットについてWebサイトで詳しく調べ始めた．次に大阪のグルメについて，グルメ情報サイトで調べ始めた．その際，ポケたびのお気に入り機能を使用して行きたい思った候補地を記録していた．次におおよそ大阪近辺を観光することが決まったため，大阪内での交通手段を調べ始めた，その際，乗り換え案内のサイトなどを利用して交通手段を調べていた．その後，滞在するホテルを宿泊料金を比較できるサイトにて調べていた．場所や料金の適するホテルを見つけ，そのホテルのサイトにて詳細を調べていた．飛行機の時間や料金などはこの段階で調査をしていた．その際，函館空港と伊丹空港のWebページを参照していた．また伊丹空港からの交通手段を乗り換え案内サイト等を使用して調べていた．
-それが終わると旅のしおり作成を開始した．旅のしおりを作成する際にはそれまでにお気に入りに入れたスポットを参照しながら，しおりを丁寧に作成していた．
+最初にユニバーサル・スタジオ・ジャパン(以下USJ)に行きたいと話し合い，USJの場所を調べ始めた．その際USJの公式Webサイトを使用していた．しかし，最初から候補を絞りすぎるのはよくないと考え箱根や沖縄といった地名をあげていった．少しの話し合いの後にとりあえず，ポケたびのお気に入り機能を使って気になる観光スポットを登録する作業を始めた．まずは大阪のおすすめ観光スポットを紹介しているWebサイトを調べた．そこで，USJ，海遊館，天保アニパ，天王寺動物園という観光スポットの候補を発見した．被験者にとってUSJと海遊館は馴染みのある場所であったが，天保アニパと天王寺動物園については詳しく知らなかったため，その2つの観光スポットについてWebサイトで詳しく調べ始めた．またその際に海遊館の詳しい場所も海遊館のWebサイトにて調べていた．海遊館などをお気に入りに指定する際にポケたびの検索機能を用いてスポットを探していた．
+次に大阪のグルメについて，グルメ情報サイトで調べ始めた．その際，先ほどと同じようにポケたびのお気に入り機能を使用して行きたい思った候補地を記録していた．次におおよそ大阪近辺を観光することが決まったため，大阪府内での交通手段を調べ始めた，その際，乗り換え案内のサイトなどを利用して交通手段を調べていた．その後，滞在するホテルを宿泊料金を比較できるサイトにて調べていた．場所や料金の適するホテルを見つけ，そのホテルのサイトにて詳細を調べていた．飛行機の時間や料金などはこの段階で調査をしていた．その際，函館空港と伊丹空港のWebページを参照していた．また伊丹空港からの交通手段を乗り換え案内サイト等を使用して調べていた．
+それが終わると旅のしおり作成を開始した．旅のしおりを作成する際にはそれまでにお気に入りに入れたスポットを参照しながら，しおりを丁寧に作成し始めた．作成開始当初は場所の指定や手動で場所を入力する方法に戸惑っている様子が見られた．飛行機や列車の時間を記入する際は調べる段階で開いておいたWebサイトを見返したり，必要に応じて新しく調べたりしていた．また，ホテルの場所や食事の場所も先ほど調べた情報を参照したり，新しく調べたりして記入していた．実験中に
+
 
 
 最後にインタビューを実施し，今回の実験の感想などを聞いた．実際に被験者が作成した旅のしおりを以下に示す．(図5.2)，(図5.3)，(図5.4)\\
@@ -491,7 +566,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \begin{figure}[htpb]
 \begin{center}
 %\includegraphics[width=4cm, height=2cm]{filerecord.eps}
-\includegraphics[scale=0.3]{willmaketools2.eps}
+\includegraphics[scale=0.4]{willmaketools2.eps}
 \caption{作成ツールイメージ}
 \end{center}
 \end{figure}
@@ -514,7 +589,8 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 
 
 %--------------------------------------------------------------------
-%\chapter*{謝辞}
+\chapter*{謝辞}
+本研究に対して様々な指導や的確なアドバイスをしてくださった，伊藤恵先生に深くお礼を申し上げます．また，ゼミの中で様々な助言をしてくださった，研究室のメンバー，ご助言をいただいた南部先生，発表会の場でご質問ご指摘してくださった先生や学生の皆様に心から感謝致します．また，本研究にご指摘くださった観光情報学会並びにFOSE2105参加者の皆様にも深くお礼を申し上げます．
 
 
 
@@ -537,12 +613,12 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \appendix
 
 %--------------------------------------------------------------------
-\chapter*{付録その1} % \chapter{}を使うと「付録A ***」となる
+%\chapter*{付録その1} % \chapter{}を使うと「付録A ***」となる
 
-付録その1(プログラムのソースリストなど)を必要があれば載せる
+%付録その1(プログラムのソースリストなど)を必要があれば載せる
 
 %--------------------------------------------------------------------
-\chapter*{付録その2}
+\chapter*{付録その1}
 
 \begin{figure}[htpb]
 \begin{center}
