5章まで終了

--- a/sample.tex
+++ b/sample.tex
@@ -516,13 +516,21 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \end{figure}
 
 
-最初にユニバーサル・スタジオ・ジャパン(以下USJ)に行きたいと話し合い，USJの場所を調べ始めた．その際USJの公式Webサイトを使用していた．しかし，最初から候補を絞りすぎるのはよくないと考え箱根や沖縄といった地名をあげていった．少しの話し合いの後にとりあえず，ポケたびのお気に入り機能を使って気になる観光スポットを登録する作業を始めた．まずは大阪のおすすめ観光スポットを紹介しているWebサイトを調べた．そこで，USJ，海遊館，天保アニパ，天王寺動物園という観光スポットの候補を発見した．被験者にとってUSJと海遊館は馴染みのある場所であったが，天保アニパと天王寺動物園については詳しく知らなかったため，その2つの観光スポットについてWebサイトで詳しく調べ始めた．またその際に海遊館の詳しい場所も海遊館のWebサイトにて調べていた．海遊館などをお気に入りに指定する際にポケたびの検索機能を用いてスポットを探していた．
+最初にユニバーサル・スタジオ・ジャパン(以下USJ)に行きたいと話し合い，USJの場所を調べ始めた．その際USJの公式Webサイトを使用していた．しかし，最初から候補を絞りすぎるのはよくないと考え箱根や沖縄といった地名をあげていった．少しの話し合いの後にとりあえず，ポケたびのお気に入り機能を使って気になる観光スポットを登録する作業を始めた．まずは大阪のおすすめ観光スポットを紹介しているWebサイトを調べた．そこで，USJ，海遊館，天保アニパ，天王寺動物園という観光スポットの候補を発見した．被験者にとってUSJと海遊館は馴染みのある場所であったが，天保アニパと天王寺動物園については詳しく知らなかったため，その2つの観光スポットについてWebサイトで詳しく調べ始めた．またその際に海遊館の詳しい場所も海遊館のWebサイトにて調べていた．海遊館などをお気に入りに指定する際にポケたびの検索機能を用いてスポットを探していた．
 次に大阪のグルメについて，グルメ情報サイトで調べ始めた．その際，先ほどと同じようにポケたびのお気に入り機能を使用して行きたい思った候補地を記録していた．次におおよそ大阪近辺を観光することが決まったため，大阪府内での交通手段を調べ始めた，その際，乗り換え案内のサイトなどを利用して交通手段を調べていた．その後，滞在するホテルを宿泊料金を比較できるサイトにて調べていた．場所や料金の適するホテルを見つけ，そのホテルのサイトにて詳細を調べていた．飛行機の時間や料金などはこの段階で調査をしていた．その際，函館空港と伊丹空港のWebページを参照していた．また伊丹空港からの交通手段を乗り換え案内サイト等を使用して調べていた．
-それが終わると旅のしおり作成を開始した．旅のしおりを作成する際にはそれまでにお気に入りに入れたスポットを参照しながら，しおりを丁寧に作成し始めた．作成開始当初は場所の指定や手動で場所を入力する方法に戸惑っている様子が見られた．飛行機や列車の時間を記入する際は調べる段階で開いておいたWebサイトを見返したり，必要に応じて新しく調べたりしていた．また，ホテルの場所や食事の場所も先ほど調べた情報を参照したり，新しく調べたりして記入していた．実験中に
+それが終わると旅のしおり作成を開始した．旅のしおりを作成する際にはそれまでにお気に入りに入れたスポットを参照しながら，しおりを丁寧に作成し始めた．作成開始当初は場所の指定や手動で場所を入力する方法に戸惑っている様子が見られた．飛行機や列車の時間を記入する際は調べる段階で開いておいたWebサイトを見返したり，必要に応じて新しく調べたりしていた．また，ホテルの場所や食事の場所も先ほど調べた情報を参照したり，新しく調べたりして記入していた．実験中にポケ旅では日を跨いで予定を記入することができないとわかった．
+最後にインタビューを実施し，今回の実験の感想などを聞いた．被験者が使用したWebサイト一覧を以下に示す．
+\begin{itemize}
+ \item 各観光スポットの公式Webサイト
+ \item 乗り換えWeb案内サイト
+ \item おすすめ観光スポットを紹介しているWebサイト
+ \item グルメ情報Webサイト
+ \item ホテルのWebサイト
+ \item 航空情報が載っているWebサイト
+\end{itemize}
 
 
-
-最後にインタビューを実施し，今回の実験の感想などを聞いた．実際に被験者が作成した旅のしおりを以下に示す．(図5.2)，(図5.3)，(図5.4)\\
+また実際に被験者が作成した旅のしおりを以下に示す．(図5.2)，(図5.3)，(図5.4)
 
 \begin{figure}[htpb]
 \begin{center}
@@ -548,16 +556,26 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \end{center}
 \end{figure}
 
+\clearpage
 
-　被験者の表情の観察から，行き先を決めるために様々な場所を候補地として探している時間が楽しそうにしていた．実験後のインタビューでは旅行計画を作成することと使用したツールについて聞いた．被験者は1時間かけて旅のしおりを作成した．1時間の内訳は始めの30分を目的地を決める時間に使用し，残りの30分間を旅のしおりを作成する時間に使用していた．\\
-　旅行計画を作成することでは「自分が行きたい場所のことを考えるのは楽しい」「実際に旅行する場面を思い描きながら作成できて良かった」などの意見があった．また「しおりという形に残るものがあると，より楽しさが深まりそう」という意見もあり，これは開発するツールに取り入れるべき意見であった．\\
+　被験者の表情の観察から，行き先を決めるために様々な場所を候補地として探している時間が楽しそうにしていた．被験者は1時間かけて旅のしおりを作成した．1時間の内訳は始めの30分を目的地を決める時間に使用し，残りの30分間を旅のしおりを作成する時間に使用していた．作成したしおりを見ると初日のしおりは丁寧に作成しているが，3日目のしおりは雑になりがちである．またアイコンの誤使用も見受けられる．移動時間に関して，飛行機は便数が少ないこともあり，しっかり記入していたが列車やバスは時間自体は調べていたものの，詳細に記述する必要がないと判断したのか大まかな時間しか記載されていない．\\
+　実験後のインタビューでは旅行計画を作成することと使用したツールについて聞いた．旅行計画を作成することで「自分が行きたい場所のことを考えるのは楽しい」「実際に旅行する場面を思い描きながら作成できて良かった」などの意見があった．また「しおりという形に残るものがあると，より楽しさが深まりそう」という意見もあり，これは開発するツールに取り入れるべき意見であった．\\
 　使用したツールに関してはポケたびを利用して気になった点を挙げてもらった．具体的には「ブラウザの戻るボタンを押すのではなく，ポケたび内の戻るボタンを押さなくてはならない」「アイコンではなく右のチェックマークをクリックする必要があるが，アイコンをクリックしてしまう．」などがあった．良かった点としては「観光スポットを検索できる」「お気に入り機能がある．」などがあった．またあったら良いと思う機能としては「移動時間や・手段を自動で表示する」「目的地の経路を表示する」ということがあった．
 
 \section{考察}
-本研究で開発するツールではこれらの要素が満たされることで，効率性や楽しさの面での支援が期待できることがわかった．被験者が最も楽しさを感じている場面は，実験中の様子から見て目的地を決めるために，
-観光スポットを検索している時間であった．また実験の旅行計画を作成する段階の終盤では若干飽きや面倒さを感じていたように見えた．理由として始めは移動手段・時間等を細かく記入していたものの，最後の方では雑に記入している様子が見られた．開発するツールでは旅のしおりを作成する際の面倒さを減らす必要があると改めてわかった．「ポケたび」のUIの面で誤認識をしてしまう場面があったため，作成する
+まずしおりを作成する最終段階で面倒そうな様子が見られたが，その理由としてポケたびの使用に慣れていないことやアイコンの使い方のわかりにくさ，しおり作成の段階で以前調べたWebサイトをもう一度見たり調べ直したりしなければならないことなどが考えられる．その面倒さは移動手段・時間が自動で表示されることである程度解決されると考えられる．被験者が最も楽しさを感じている場面は，実験中の様子から見て目的地を決めるために，観光スポットを検索している時間であった．この際には旅行の詳細は決まっておらずあそこにも行きたいここにも行きたいという想像が膨らんでいる様子であった．そのため，この楽しさを損なわないために観光スポットに関してはより多くの情報を提示し選択の幅を広げる必要があると考えられる．
+次にしおりを作成する際には，まずは大まかな場所，今回の実験で言う大阪近辺を決定しその旅行でメインとなる観光スポットと，時間の制約のある中で他にも行ける場所がないか探す，そして移動手段・時間を調べたりグルメ情報を調べたりする，という順番があることがわかった．しおりを作成する全ての人がこの順で作成するわけではないだろうが，開発するツールでの手順の提示の参考とすべきであった．
+被験者はおすすめ観光スポットを紹介するWebサイトやグルメ情報サイトをよく使用していた．これは明確に行きたい場所がUSJのみであったため，その近辺にある観光スポットを探すために使用していた．グルメ情報サイトに関しては具体的にどのお店で食事をしたいということが決まっていないことと，大阪のグルメに詳しくないことがあり，使用していたと考えられる．開発するツールでは例えば「大阪府のおすすめ観光スポット」のようにユーザから検索をかけて調べるだけでなく，ある程度地域などを絞った情報を提示べきであると考えられる．
+「ポケたび」の良くなかった点としてUIの面で誤認識をしてしまうことと戻るに関することがあった．特に図\ref{Lgoicon}のようなその時間に何をするか一目でわかりやすくするアイコンを選択する画面において，選択する際には右側のラジオボタンを選択しなければならないが，右側のアイコン自体を誤選択してします場面が見受けられた．また保存をしていない状態でブラウザの戻るを押すと変更が保存されずにページが遷移してしまう．これを防ぐにはポケたび内で「←」のボタンが押す必要があるが，これを見落としがちであった．
+\begin{figure}[htpb]
+\begin{center}
+\includegraphics[scale=0.7]{goicon.eps}
+\end{center}
+\caption{実験で被験者が作成したしおり(2/3)}
+\label{Lgoicon}
+\end{figure}
 
-
+「ポケたび」の良かった点としては，お気に入り機能と検索機能が挙げられる．お気に入り機能によって広く調査している段階で気に入ったスポットを登録し，しおりを作成する段階で再び探す手間を省くことができる．ポケたび内で観光スポットを検索することができるので，観光スポットの名前がわかれば簡単に調べることができ，これをお気に入りに登録することができる．
 
 %--------------------------------------------------------------------
 \chapter{作成するツール}% 6章のタイトル
@@ -567,8 +585,8 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \begin{center}
 %\includegraphics[width=4cm, height=2cm]{filerecord.eps}
 \includegraphics[scale=0.4]{willmaketools2.eps}
-\caption{作成ツールイメージ}
 \end{center}
+\caption{作成ツールイメージ}
 \end{figure}
 
 最終版では加筆します．
